# rtphone

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.txt  build_android.py  build_android.sh  build_linux.py  build_windows.py  count_cpp_stats.py  run_ci.sh
src/: CMakeLists.txt  media-engine.vcxproj  media-engine.vcxproj.filters
src/engine/: config.h  engine_config.h
src/engine/agent/: Agent_AudioManager.cpp  Agent_AudioManager.h  Agent_Impl.cpp  Agent_Impl.h  Agent_Interface.cpp  Agent_Interface.h
src/engine/audio/: Audio_Android.cpp  Audio_Android.h  Audio_AndroidOboe.cpp  Audio_AndroidOboe.h  Audio_CoreAudio.cpp  Audio_CoreAudio.h  Audio_DataWindow.cpp  Audio_DataWindow.h  Audio_DevicePair.cpp  Audio_DevicePair.h  Audio_DirectSound.cpp  Audio_DirectSound.h  Audio_Helper.cpp  Audio_Helper.h  Audio_Interface.cpp  Audio_Interface.h  Audio_Mixer.cpp  Audio_Mixer.h  Audio_Null.cpp  Audio_Null.h  Audio_Player.cpp  Audio_Player.h  Audio_Quality.cpp  Audio_Quality.h  Audio_Resampler.cpp  Audio_Resampler.h  Audio_WavFile.cpp  Audio_WavFile.h  Audio_Wmme.cpp  Audio_Wmme.h  Audio_iOS.cpp  Audio_iOS.h  CMakeLists.txt
src/engine/endpoint/: EP_Account.cpp  EP_Account.h  EP_AudioProvider.cpp  EP_AudioProvider.h  EP_DataProvider.cpp  EP_DataProvider.h  EP_Engine.cpp  EP_Engine.h  EP_NetworkQueue.cpp  EP_NetworkQueue.h  EP_Observer.cpp  EP_Observer.h  EP_ReliableTunnel.cpp  EP_ReliableTunnel.h  EP_Session.cpp  EP_Session.h
src/engine/helper/: CMakeLists.txt  HL_AsyncCommand.cpp  HL_AsyncCommand.h  HL_Base64.h  HL_ByteBuffer.h  HL_Calculator.h  HL_CrashRpt.cpp  HL_CrashRpt.h  HL_CsvReader.cpp  HL_CsvReader.h  HL_Exception.h  HL_File.cpp  HL_File.h  HL_HepSupport.cpp  HL_HepSupport.h  HL_InternetAddress.h  HL_IuUP.cpp  HL_IuUP.h  HL_Log.cpp  HL_Log.h  HL_NetworkFrame.cpp  HL_NetworkFrame.h  HL_NetworkSocket.cpp  HL_NetworkSocket.h  HL_Optional.hpp  HL_OsVersion.cpp  HL_OsVersion.h  HL_Pointer.cpp  HL_Pointer.h  HL_Process.cpp  HL_Process.h  HL_Rtp.cpp  HL_Rtp.h  HL_Singletone.h  HL_SocketHeap.cpp  HL_SocketHeap.h  HL_Statistics.h  HL_StreamState.h  HL_String.cpp  HL_String.h  (+16 more)
src/engine/media/: CMakeLists.txt  MT_AmrCodec.cpp  MT_AmrCodec.h  MT_AudioCodec.cpp  MT_AudioCodec.h  MT_AudioReceiver.cpp  MT_AudioReceiver.h  MT_AudioStream.cpp  MT_AudioStream.h  MT_Box.cpp  MT_Box.h  MT_CngHelper.cpp  MT_CngHelper.h  MT_Codec.cpp  MT_Codec.h  MT_CodecList.cpp  MT_CodecList.h  MT_Dtmf.cpp  MT_Dtmf.h  MT_EvsCodec.cpp  MT_EvsCodec.h  MT_NativeRtpSender.cpp  MT_NativeRtpSender.h  MT_SevanaMos.cpp  MT_SevanaMos.h  MT_SingleAudioStream.cpp  MT_SingleAudioStream.h  MT_SrtpHelper.cpp  MT_SrtpHelper.h  MT_Statistics.cpp  MT_Statistics.h  MT_Stream.cpp  MT_Stream.h  MT_WebRtc.cpp  MT_WebRtc.h
src/libs/: versions.txt
src/libs/android-ifaddrs/: ifaddrs.cpp  ifaddrs.h
src/libs/fmt/: sources.cmake
src/libs/g722/: CMakeLists.txt  g722.h  g722_bitstream.c  g722_dc_restore.h  g722_decode.c  g722_encode.c  g722_inttypes.h  g722codec.c
src/libs/gsmhr/: CMakeLists.txt  gsmhr.cpp  gsmhr.h  gsmhr_dtx.c  gsmhr_dtx.cpp  gsmhr_dtx.h  gsmhr_gsm_hr.c  gsmhr_homing.cpp  gsmhr_host.c  gsmhr_host.h  gsmhr_sp_dec.c  gsmhr_sp_dec.h  gsmhr_sp_enc.c  gsmhr_sp_enc.h  gsmhr_sp_frm.c  gsmhr_sp_frm.h  gsmhr_sp_rom.c  gsmhr_sp_rom.h  gsmhr_sp_sfrm.c  gsmhr_sp_sfrm.h  gsmhr_typedefs.h  gsmhr_utils.c  gsmhr_vad.cpp  gsmhr_vad.h
src/libs/ice/: CMakeLists.txt  ICEAction.h  ICEAddress.cpp  ICEAddress.h  ICEAuthTransaction.cpp  ICEAuthTransaction.h  ICEBinding.cpp  ICEBinding.h  ICEBox.cpp  ICEBox.h  ICEBoxImpl.cpp  ICEBoxImpl.h  ICEByteBuffer.cpp  ICEByteBuffer.h  ICECRC32.cpp  ICECRC32.h  ICECandidate.cpp  ICECandidate.h  ICECandidatePair.cpp  ICECandidatePair.h  ICECheckList.cpp  ICECheckList.h  ICEError.cpp  ICEError.h  ICEEvent.h  ICEHMAC.cpp  ICEHMAC.h  ICEIosSupport.h  ICEIosSupport.mm  ICELog.cpp  ICELog.h  ICEMD5.cpp  ICEMD5.h  ICENetworkHelper.cpp  ICENetworkHelper.h  ICEPacketTimer.cpp  ICEPacketTimer.h  ICEPlatform.cpp  ICEPlatform.h  ICERelaying.cpp  (+33 more)
src/libs/ice/android-ifaddrs/: android-ifaddrs.c  android-ifaddrs.h
src/libs/jrtplib/: CMakeLists.txt  README.TXT  jrtplib.vcproj  jrtplib.vcxproj
src/libs/jrtplib/src/: CMakeLists.txt  rtcpcompoundpacket.cpp  rtcpcompoundpacket.h  rtcprrpacket.h  rtcpscheduler.cpp  rtcpsdespacket.h  rtcpsrpacket.h  rtpconfig.h  rtpexternaltransmitter.cpp  (+23 more)
src/libs/json/: json-forwards.h  json.h  jsoncpp.cpp
src/libs/libevs/: CMakeLists.txt
src/libs/libg729/: CMakeLists.txt  acelp_ca.c  basic_op.c  cor_func.c  de_acelp.c  dec_gain.c  dec_lag3.c  dspfunc.c  g729_acelp_ca.cpp  g729_basic_op.cpp  g729_basic_op.h  g729_cod_ld8a.cpp  g729_cor_func.cpp  g729_de_acelp.cpp  g729_dec_gain.cpp  g729_dec_gain.h  g729_dec_lag3.cpp  g729_dec_ld8a.cpp  g729_dspfunc.cpp  g729_filter.cpp  g729_gain.cpp  g729_gain.h  g729_gainpred.cpp  g729_ld8a.h  g729_lpc_729.cpp  g729_lpcfunc.cpp  g729_lpcfunc.h  g729_lsp.cpp  g729_lsp.h  g729_lspdec.cpp  g729_lspdec.h  g729_lspgetq.cpp  g729_lspgetq.h  g729_oper_32b.cpp  g729_oper_32b.h  g729_p_parity.cpp  g729_pitch_a.cpp  g729_post_pro.cpp  g729_postfilt.cpp  g729_pre_proc.cpp  (+19 more)
src/libs/libgsm/: CMakeLists.txt  gsm.h  gsm_add.c  gsm_code.c  gsm_config.h  gsm_create.c  gsm_decode.c  gsm_decode_helper.c  gsm_destroy.c  gsm_encode.c  gsm_long_term.c  gsm_lpc.c  gsm_option.c  gsm_preprocess.c  gsm_private.h  gsm_rpe.c  gsm_short_term.c  gsm_table.c
src/libs/libsrtp/: CMakeLists.txt
src/libs/oboe/: CMakeLists.txt
src/libs/opencore-amr/: CMakeLists.txt  opencore-amr-nb.sln  opencore-amr-nb.vcproj  opencore-amr-nb.vcxproj  opencore-amr-nb.vcxproj.filters
src/libs/opus/: CMakeLists.txt
src/libs/resiprocate/: CMakeLists.txt  ReleaseNotes.txt  reSIProcate_7_1.sln  reSIProcate_9_0.sln
src/libs/resiprocate.legacy/: reSIProcate_10_0.sln  reSIProcate_8_0.sln
src/libs/speexdsp/: CMakeLists.txt
src/libs/srtp/: CMakeLists.txt  ReadMe.txt  srtp.vcproj  srtp.vcxproj  srtp7.sln  srtp7.vcproj  srtp7.vcxproj  srtp7.vcxproj.filters
src/libs/webrtc/: CMakeLists.txt  webrtc.vcproj  webrtc.vcxproj  webrtc.vcxproj.filters
(+1049 files in other folders)
